k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-backup-ingress
  namespace: cloud-backup
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000
          - path: /api/backup
            pathType: Prefix
            backend:
              service:
                name: backup-service
                port:
                  number: 3002
          - path: /api/upload
            pathType: Prefix
            backend:
              service:
                name: upload-service
                port:
                  number: 3003
          - path: /api/restore
            pathType: Prefix
            backend:
              service:
                name: restore-service
                port:
                  number: 3004
          - path: /api/notify
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3006
          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3007
          - path: /api/scheduler
            pathType: Prefix
            backend:
              service:
                name: scheduler-service
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
